...
              />
            </>
          )}
        </SettingsContainer>

        <SettingsContainer title="Account">
          <SettingsItem text="Logout" onPress={() => void handleSignOut()} />
        </SettingsContainer>
      </VStack>
    </ScrollView>
  );
}

