appId: ${APP_ID}
env:
  EMAIL: user@test.com
  PASSWORD: password
---
- launchApp
- runFlow: ../utils/onboarding-and-login.yaml
- assertVisible: Feed
- assertVisible:
    id: style-tab
- tapOn:
    id: style-tab
- assertVisible:
    id: style-catalog-count
- tapOn:
    id: settings-tab
- assertVisible: Settings
- scroll
- assertVisible: Logout
