appId: ${APP_ID}
env:
  EMAIL: user@test.com
  PASSWORD: password
tags:
  - util
---
- tapOn:
    id: email-input
- inputText: ${EMAIL}
- runFlow: ../utils/hide-keyboard.yaml
- tapOn:
    id: password-input
- inputText: ${PASSWORD}
- runFlow: ../utils/hide-keyboard.yaml
- tapOn:
    id: login-button
- assertVisible: Feed
