appId: ${APP_ID}
---
- clearState
- launchApp
- assertVisible:
    id: onboarding-title
- assertVisible: Get Started
- tapOn: Get Started
- assertVisible: Sign In
