appId: ${APP_ID}
tags:
  - util
---
- assertVisible:
    id: onboarding-title
- assertVisible: Get Started
- tapOn: Get Started
- assertVisible: Sign In
